# mle_module_1

./: dsrp-gh-key.pub  pyproject.toml
models/: modelo_dummy.joblib
notebooks/: clase_classification_heart.ipynb  clase_pca_clustering.ipynb  davidrodriguez.ipynb  trabajo_final_david.ipynb  utils.py
scripts/: env_setup.sh
